# citation

./: Cargo.toml
src/: lib.rs
tests/: CITATION.cff  test.rs
