[package]
name = "citation"
version = "0.0.0"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
description = "library to manipulate citation files"
license = "MIT OR Apache-2.0"
homepage = "https://lucalewin.dev/projects/citation"
documentation = "https://lucalewin.dev/docs/citation"
repository = "https://github.com/lucalewin/citation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
